--- a/main.html
+++ b/main.html
@@ -4,6 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+	.holder {
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: space-evenly; 
+  gap: 10px; 
+}
+</style>
 </head>
 
 <body>
